# rameshm-agents

./: .gitignore  README.md  pyproject.toml
src/rameshm/agents/: basic_tool_example.py
src/rameshm/agents/researcher/: guardrails.py  instructions_config.py  researcher_agent_with_openai.py
src/rameshm/agents/utils/: basic_setup.py
src/rameshm/examples/: openai_responses_create.py  openai_responses_parse.py
